                       User-Visible DocKnot Changes

DocKnot 1.03 (unreleased)

    Add a paragraph to the license section of README and README.md saying
    that SPDX license identifiers are in use and providing a pointer to
    the SPDX license list.

    Update to rra-c-util 7.1:

    * Add SPDX-License-Identifier headers to all substantial source files.

DocKnot 1.02 (2017-12-31)

    Support quoted paragraphs (each line starting with ">") and turn them
    into indentation when turning markup into plain text.

    Support numbered lists when converting to thread.

    Force long, unbreakable lines to be left intact when wrapping.

    When wrapping paragraphs, preserve two spaces after periods even when
    the period comes before a closing parenthesis or quote mark.

    Support test/prefix metadata, which replaces the introduction to the
    test instructions.

    Add new license text BSD-3-clause-or-GPL-1+ to support pam-krb5.
    Support markdown formatting in license texts when converting to
    thread to handle the numbered clauses.

    Support more complex quote attributions in thread output, and
    automatically add \cite[] around work names if they don't contain
    double quotes.

    Add security advisory support to the thread template.

DocKnot 1.01 (2016-12-25)

    Add build and test instructions for Autoconf packages, including
    details about Kerberos configuration, to the README and README.md
    templates.  Allow a testing section in the metadata to override the
    added testing section.  Add a flag to indicate that the package is not
    intended to be installed, which suppresses some of the template.

    Add support for license notices (the notices metadata file), which
    should be appended to the end of the stock license statement wherever
    it is generated.

    Add support for stock building and installation sections for Perl
    module packages using either Module::Build or ExtUtils::MakeMaker.
