@@ -6,6 +6,9 @@ DocKnot 1.03 (unreleased)
     that SPDX license identifiers are in use and providing a pointer to
     the SPDX license list.
 
+    Add SPDX-License-Identifier headers to all substantial source files,
+    and add a test to check for them.
+
     Update to rra-c-util 7.1:
 
     * Add SPDX-License-Identifier headers to all substantial source files.
